# d2f_vllm

./: .gitignore  .gitmodules  404.html  README.md  attention_profile.csv  examply.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  typescript
.github/workflows/: gh-pages.yml
d2f_engine/: __init__.py  config.py  llm.py
d2f_engine/engine/: async_engine.py  block_manager.py  dp_engine.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
d2f_engine/layers/: embed_head.py  linear.py  sampler.py
d2f_engine/models/: auto_model.py  dream.py  fast_dllm_v2.py  llada.py  qwen3.py
d2f_engine/serve/: __init__.py  __main__.py
d2f_engine/utils/: context.py  loader.py
d2f_vllm/: __init__.py  config.py  llm.py
d2f_vllm/engine/: block_manager.py  dp_engine.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
d2f_vllm/layers/: attention.py  attention_v1.py  attention_v1_profile.py  attention_v2.py  attention_v2_dup.py  embed_head.py  linear.py  lora_linear.py  rotary_embedding.py  sampler.py
d2f_vllm/models/: auto_model.py  dream.py  llada.py  qwen3.py
d2f_vllm/utils/: checker.py  context.py  loader.py
d2f_vllm_doc/: mkdocs.yml
d2f_vllm_doc/docs/: index.md
d2f_vllm_doc/site/: 404.html  index.html
demo/: eval_dream.py  eval_llada.py  profile.py  test_dllm_decoding_kernel.py  test_dllm_kv_cache_store.py  test_dream_dvllm.py  test_dream_dvllm_gsm8k.py  test_dream_dvllm_human_eval.py  test_dream_model_weight_fixed.py  test_load_kv_cache_kernel.py  test_qwen_dvllm.py
demo/config/: accelerate_config.yaml
demo/mimic_data/: mimic_slot_mapping.py
demo/scripts/: easy_dream.sh  test_dream.sh
docs/: impl.md  index.md
document/: mkdocs.yml
document/docs/: index.md  license.md
document/site/: index.html
dvllm/: __init__.py  llm.py
dvllm/engine/: block_manager.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
dvllm/layers/: attention.py  embed_head.py
dvllm/models/: qwen3.py
examples/: eval_dream.py  eval_llada.py  summary.py  test_causal_lm_decoding_kernel.py  test_dllm_decoding_kernel.py  test_dllm_kv_cache_load.py  test_dllm_kv_cache_store.py  test_dream_dvllm_gsm8k.py  test_dream_dvllm_human_eval.py  test_dream_model_weight.py  test_dream_model_weight_fixed.py  test_llada_dvllm_human_eval.py  test_qwen_dvllm.py
examples/.ipynb_checkpoints/: test_dream_dvllm_gsm8k-checkpoint.py
examples/ops/: fa.py
impl/0_overview/: index.html
impl/1_engine/: index.html
impl/2_scheduler/: index.html
impl/3_kvcache_manager/: index.html
impl/4_model_runner/: index.html
impl/5_model_registry/: index.html
impl/6_kernels/: index.html
license/: index.html
log/: attention_profile.csv  test.md
scripts/: launch_server.sh  profile_dvllm_dream.sh  test_dvllm_dllm_decoding_kernel.sh  test_dvllm_dream.sh  test_dvllm_dream_gsm8k.sh  test_dvllm_dream_human_eval.sh  test_dvllm_qwen.sh
search/: search_index.json
user-guide/1_install/: index.html
(+45 files in other folders)
